refactor: adding new field for value in products.